--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
-    "start" : "node build/server.js",
+    "start": "node build/server.js",
     "build": "tsup src --out-dir build"
   },
   "keywords": [],
@@ -13,12 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.0.2",
-    "tsup": "^8.5.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "@types/node": "22.18.9",
+    "tsup": "8.5.0",
+    "tsx": "4.20.6",
+    "typescript": "5.9.3"
   },
   "dependencies": {
-    "fastify": "^5.6.1"
+    "fastify": "5.6.1"
   }
 }
