--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "22.18.9",
+    "prisma": "6.17.1",
     "tsup": "8.5.0",
     "tsx": "4.20.6",
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@prisma/client": "6.17.1",
     "dotenv": "17.2.3",
     "fastify": "5.6.1",
     "zod": "4.1.12"
