--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.18.9",
     "prisma": "6.17.1",
     "tsup": "8.5.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.17.1",
+    "bcryptjs": "3.0.2",
     "dotenv": "17.2.3",
     "fastify": "5.6.1",
     "zod": "4.1.12"
