--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.18.9",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "prisma": "6.17.1",
     "tsup": "8.5.0",
     "tsx": "4.20.6",
